assets/scss/components/_image-cropper.scss
$hmpps-cropper-width: 221px;
$hmpps-cropper-height: 276px;

.hmpps-cropper-photo-container {
  border: 1px solid $govuk-border-colour;
  width: 100%;
  @include govuk-responsive-padding(2);
  @include govuk-responsive-margin(6, 'bottom');

  &__content {
    display: flex;
  }

  &__photo-preview {
    img {
      width: $hmpps-cropper-width;
      height: $hmpps-cropper-height;
    }
  }

  &__description {
    @include govuk-responsive-padding(2, 'top');
    margin-left: 24px;

    h2 {
      @include govuk-responsive-margin(3, 'bottom');
    }
  }

  &__controls {
    width: 100%;
    display: flex;
    justify-content: space-between;

    &__full-width {
      width: 100%;
    }

    &__half-width {
      width: calc(($hmpps-cropper-width/2) - 3px);
    }
  }

  cropper-canvas {
    width: $hmpps-cropper-width;
    height: $hmpps-cropper-height;
  }

  cropper-selection {
    outline: 1px solid $govuk-focus-colour;
    border: 1px solid govuk-functional-colour(text);
  }

  $handles: 'n-resize', 'ne-resize', 'e-resize', 'se-resize', 's-resize', 'sw-resize', 'w-resize', 'nw-resize';
  @each $handle in $handles {
    cropper-handle[action='#{$handle}']::after {
      background-color: $govuk-focus-colour;
    }
  }
}

#photo-cropper-container {
  display: none;
}

#photo-preview-container {
  display: none;
}

#rotate-button-group {
  display: none;
}

.hmpps-button__toggle-crop,
.hmpps-button__rotate-clockwise {
  margin-bottom: 0 !important;
}

.hmpps-image-cropper-button-text {
  display: flex;
  align-items: center;
  justify-content: center;

  img {
    width: auto;
    height: auto;
  }
}

